--- a/v0.1_trimble_seq_cpp/Makefile
+++ b/v0.1_trimble_seq_cpp/Makefile
@@ -3,7 +3,7 @@ CXXFLAGS := -O3 -march=native
 all: mcsp
 
 mcsp: mcsp.c graph.c graph.h
-	$(CXX) $(CXXFLAGS) -Wall -std=c++11 -o prog graph.c mcsp.c -pthread
+	$(CXX) $(CXXFLAGS) -Wall -std=c++11 -o prog graph.c mcsp.c test_utility.c -pthread
 	
 clean:
 	rm -f prog
